<resources>
    <string name="app_name">FurnitureVision</string>

    <string name="facebook_app_id">2864556093811380</string>
    <string name="fb_login_protocol_scheme">fb2864556093811380</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_cart">My Cart</string>
    <string name="track_order">Track Order</string>
    <string name="order_history">Order history</string>
    <string name="my_favourite">My Favourite</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="favourite">favourite</string>
    <string name="Products">Products</string>
    <string name="Logout">logout</string>


</resources>